--- a/report.tex
+++ b/report.tex
@@ -73,11 +73,11 @@
 	
 	\begin{tabular}{| r | l |}
 		\hline
-		\textbf{Track} & TODO \\ \hline
-		\textbf{Title} & TODO \\ \hline
-		\textbf{Artist} & TODO \\ \hline
-		\textbf{Album} & TODO \\ \hline 
-		\textbf{Year} & TODO \\ \hline
+		\textbf{Track} & 4 \\ \hline
+		\textbf{Title} & Jesus, Take the Wheel \\ \hline
+		\textbf{Artist} & Carrie Underwood \\ \hline
+		\textbf{Album} & \textit{Some Hearts} \\ \hline 
+		\textbf{Year} & 2005 \\ \hline
 	\end{tabular} \\
 	
 	\noindent The filesystem will present the following abstraction: \\ 
@@ -85,12 +85,12 @@
 	\dirtree{%
 		.1 /.
 		.2 albums/.
-		.3 TODO-album-name/.
-		.4 TODO-track-title.
+		.3 Some Hearts/.
+		.4 4-Jesus, Take the Wheel.
 		.2 decades/.
-		.3 TODO-album-decade/.
-		.4 TODO-album-name/.
-		.5 TODO-track-title.
+		.3 2000s/.
+		.4 Some Hearts/.
+		.5 4-Jesus, Take the Wheel.
 	}
 	
 	\section{Setup}
