--- a/report.tex
+++ b/report.tex
@@ -69,7 +69,7 @@
 	\pagebreak \restoregeometry
 	
 	\subsection{Example}
-	Given a audio file with the following metadata: \\
+	Given an audio file with the following metadata: \\
 	
 	\begin{tabular}{| r | l |}
 		\hline
