--- a/report.tex
+++ b/report.tex
@@ -98,10 +98,11 @@
 	% TODO
 	
 	\subsection{Setup}
-	The following packages are required: \texttt{libfuse-dev} \texttt{pkg-config}, \texttt{mp3info}, \texttt{curl}, \texttt{jq}. Assuming a Debian-based system, these can be installed by running \\ \texttt{./install-deps.sh} or running the following command manually:
+	The following packages are required: \texttt{libfuse-dev} \texttt{pkg-config}, \texttt{mp3info}, \texttt{curl}, \texttt{jq}. In addition, to run the test performance scripts, the \texttt{python3} package is required, along with the \texttt{stagger} Python library. Assuming a Debian-based system, these can be installed by running \\ \texttt{./install-deps.sh} or running the following command manually:
 	
 \begin{lstlisting}[language=Bash]
-sudo apt-get install -y libfuse-dev pkg-config mp3info curl jq 
+sudo apt-get install -y libfuse-dev pkg-config mp3info curl jq python3
+sudo pip3 install stagger
 \end{lstlisting}
 	
 	\noindent Once the dependencies are installed, run \texttt{make} from the project root to build the client. Finally, run \texttt{./yourtuneslib <mountpoint>} to mount the filesystem to a local directory, with \texttt{<mountpoint>} being the path to an existing directory.
