--- a/report.tex
+++ b/report.tex
@@ -177,15 +177,15 @@ sudo pip3 install stagger
 	\noindent Run them with \texttt{./perf-test-no-fuse.sh} and \texttt{./perf-test-with-fuse.sh}, respectively.
 	
 	\vspace{0.25cm}
-	\noindent \input{data-graph} % TODO: This is a dummy graph for now
+	\noindent \input{data-graph}
 	
 	\vspace{0.5cm}
 	\noindent \begin{tabular}{l*{4}{c}r}
 		& Min & Max & Mean & Std. Div. & \\
 		\hline
-		Copy to local folder & TODO s & TODO s & \textbf{TODO s} & \textbf{TODO s} &  \\
-		Copy to FUSE mountpoint & TODO s & TODO s & \textbf{TODO s} & \textbf{TODO s} &  \\
-		Distance           & +TODO s & +TODO s & \textbf{+TODO s} & \textbf{+TODO s} & \\
+		To local folder & 0.001754 s & 0.002715 s & \textbf{0.001964 s} & \textbf{0.000220 s} &  \\
+		To filesystem & 0.002236 s & 0.006568 s & \textbf{0.003034 s} & \textbf{0.000779 s} &  \\
+		Distance           & +0.000482 s & +0.003853 s & \textbf{+0.001070 s} & \textbf{+0.000559 s} & \\
 	\end{tabular}
 
 	\vspace{0.5cm} 
