Fix pip3 install

--- a/report.tex
+++ b/report.tex
@@ -107,7 +107,7 @@
 	The following packages are required: \texttt{libfuse-dev} \texttt{pkg-config}, \texttt{curl}. In addition, to run the test performance scripts, the \texttt{python3} package is required, along with the \texttt{stagger} Python library. Assuming a Debian-based system, these can be installed by running \texttt{./install-deps.sh} or running the following command manually:
 	
 \begin{lstlisting}[language=Bash]
-sudo apt-get install -y libfuse-dev pkg-config curl python3
+sudo apt-get install -y libfuse-dev pkg-config curl python3 python3-pip
 sudo pip3 install stagger
 \end{lstlisting}
 	
