--- a/report.tex
+++ b/report.tex
@@ -99,7 +99,7 @@
 	
 	\noindent When a file is moved into the mountpoint, the client performs an \texttt{HTTP POST} to \texttt{/upload}. File accesses are handled via an \texttt{HTTP GET} to \texttt{/get\_file}, and removals are handled with an \texttt{HTTP GET} to \texttt{/delete\_file}. \\
 	
-	\noindent In addition, metadata is refreshed when a directory is opened, refreshed, or a change occurs (e.g. creating or deleting a file). As a result, the local filesystem is always representative of the most current state of the remote server, even through external changes through concurrent use.
+	\noindent In addition, metadata is refreshed when a directory is opened, refreshed, or a change occurs (e.g. creating or deleting a file). As a result, the local filesystem is always representative of the most current state of the remote server, even through external changes through concurrent use. The client utilizes local caching to prevent a query to the server upon every local change.
 	
 	\pagebreak
 	
